Bug 300782. No event fired when a frame or iframe's src changes and new content is loaded. r=timeless, sr=bz, a=bsmedberg